fix product card size on small screens

--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -16,7 +16,7 @@
         th{
             text-align: center;
             @media screen and(max-width:576px) {
-                font-size: 11px;
+                font-size: 10px;
             }
         }
         .item-image{
